style.css
body
{
    background: rgb(212, 212, 212);
    
    font-family: Arial, Helvetica, sans-serif
}

#separator
{
    display: flex;
    justify-content: end;

    margin: 0 0 2em 0;

    background: rgb(41, 42, 48);
}

#text-settings-widget > button
{
    position: relative;

    background: rgb(75, 76, 83);
}

#separator button
{
    display: grid;
    place-items: center;

    width: 3.33em;
    height: 3.33em;
}

#text-settings-widget menu button
{
    background-color: transparent;
}

menu li
{
    list-style-type: none;
}

#text-settings-widget menu
{
    position: absolute;
    right: 0;

    display: none;
    place-items: center;
    grid-template-columns: 1fr 1fr;
    gap: 1em 0;

    padding: 1em;

    background: rgb(51, 51, 51);
    color: white;
}

.text-settings-slider
{
    display: grid;
    place-items: center;
    grid-column: span 2;
    
    height: 3.33em;
}

main
{
    width: 50%;
}

#content
{
    display: flex;
}

#content::before,
#content::after
{
    flex-grow: 0;

    content: '';
}

#content::before
{
    flex-grow: var(--left-grow, 0);
}

#content::after
{
    flex-grow: var(--right-grow, 1);
}

h1 {
    margin: 0 0 1em 0;
}

main div {
    font-size: 1.2em;
}

h2 {
    margin: 2em 0;
}

